force-app/main/default/objects/BigMachines__Quote_Product__c/BigMachines__Quote_Product__c.object-meta.xml
<CustomObject>
    <description>An individual line item on an Oracle CPQ Cloud quote</description>
    <label>Quote Product</label>
    <nameField>
        <label>Part Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Oracle CPQ Cloud Quote Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>