force-app/main/default/objects/BigMachines__Quote_Product__c/fields/BigMachines__Quote__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Quote__c</fullName>
    <label>Quote</label>
    <referenceTo>BigMachines__Quote__c</referenceTo>
    <relationshipLabel>Quote Products</relationshipLabel>
    <relationshipName>BigMachines_Quote_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>