force-app/main/default/objects/BigMachines__Quote_Product__c/fields/BigMachines__Synchronization_Id__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Synchronization_Id__c</fullName>
    <label>Synchronization Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>