force-app/main/default/objects/BigMachines__Quote_Product__c/fields/Ext_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Ext_Net_Price__c</fullName>
    <label>Ext Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>